--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     lower
                     contrast.</p>
                 <div class="button-signup">
-                    <button class="signup">Sign up</button>
+                    <button type="button" class="signup">Sign up</button>
                 </div>
             </div>
             <div class="right-header">
