Add second section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
             </div>
         </section>
     </div>
+    <section class="second-section">
+        <h2>Some random information.</h2>
+        <div class="pictures">
+            <div class="picture">
+                <img src="images/1.webp">
+                <p>some text here bla bla lorem ipsum</p>
+            </div>
+            <div class="picture">
+                <img src="images/2.png">
+                <p>some text here bla bla lorem ipsum</p>
+            </div>
+            <div class="picture">
+                <img src="images/3.png">
+                <p>some text here bla bla lorem ipsum</p>
+            </div>
+            <div class=" picture">
+                <img src="images/4.png">
+                <p>some text here bla bla lorem ipsum</p>
+            </div>
+    </section>
+    <section class="third-section">
+
+    </section>
+
 </body>
 
 </html>
