--- a/index.html
+++ b/index.html
@@ -49,13 +49,22 @@
                 <img src="images/3.png">
                 <p>some text here bla bla lorem ipsum</p>
             </div>
-            <div class=" picture">
+            <div class="picture">
                 <img src="images/4.png">
                 <p>some text here bla bla lorem ipsum</p>
             </div>
     </section>
     <section class="third-section">
-
+        <div class="quote-container">
+            <p>
+                This is an inspiring quote or a customer testimonial or something, maybe it's just filling up space or
+                maybe
+                people actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="author">
+                -Thor, God Of Thunder
+            </p>
+        </div>
     </section>
 
 </body>
