--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 Sign up
             </button>
         </div>
+    </section>
+    <footer>
+        <p>Copyright &copy; Andrei Grigoruta 2022</p>
+    </footer>
 
 </body>
 
