--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container-first-section">
+    <div class="nav-container container-first-section">
         <nav class="menu-container">
             <h3>Header Logo</h3>
             <ul class="menu">
@@ -19,6 +19,8 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
+    </div>
+    <div class="container-first-section">
         <section class="header">
             <div class="left-header">
                 <h1>Topaz - Parfumuri de nisa</h1>
