Add picture hover

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <img src="images/4.png">
                 <p>some text here bla bla lorem ipsum</p>
             </div>
+        </div>
     </section>
     <section class="third-section">
         <p>
