--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
+        <ul class="menu-mobile">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
     </div>
     <div class="container-first-section">
         <section class="header">
