--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+
     <title>Topaz - Parfumuri de nisa</title>
 </head>
 
 <body>
+
     <div class="nav-container container-first-section">
         <nav class="menu-container">
             <h3>Header Logo</h3>
@@ -18,6 +20,11 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
         <ul class="menu-mobile">
             <li><a href="index.html">Home</a></li>
@@ -25,6 +32,7 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
+    <script src="script.js"></script>
     <div class="container-first-section">
         <section class="header">
             <div class="left-header">
