--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-
+    <script src="script.js"></script>
     <title>Topaz - Parfumuri de nisa</title>
 </head>
 
@@ -20,19 +20,19 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
-            <div class="hamburger">
+            <div class="hamburger" id="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
         </nav>
-        <ul class="menu-mobile">
+        <ul class="menu-mobile" id="menu-mobile">
             <li><a href="index.html">Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
-    <script src="script.js"></script>
+
     <div class="container-first-section">
         <section class="header">
             <div class="left-header">
