--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav class="menu-container">
             <h3>Header Logo</h3>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">About</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span class="bar"></span>
@@ -27,9 +27,9 @@
             </div>
         </nav>
         <ul class="menu-mobile" id="menu-mobile">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">About</a></li>
         </ul>
     </div>
 
